clusters/dev/minikube/apps/canary/podinfo/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    istio-injection: disabled
