clusters/dev/minikube/apps/canary/podinfo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: test
  labels:
    app: podinfo
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  - port: 9797
    targetPort: http-metrics
    protocol: TCP
    name: http-metrics
  selector:
    app: podinfo
